Changes on version 1.2.2 (current):
- Better `compare:` method to replicate output of NSNumber, especially around NaN.
- NSCoder support for older non-keyed coding (for older versions of Apple OSes).
- Properties to construct special numbers: infinity, negative Infinity (minusInfinity), NaN, zero, and negative Zero (-0.0 double).
- Better isNegativeOne
- Adds isPositiveZero and isNegativeZero for real numbers.
- Greater unit test coverage
- NSMockNumber to test different data types that aren't used by NSNumber.

Changes on version 1.2.1:
- Adds bitNot to NSNumber and NSMutableNumber for returning the bitNot number.
- Adds bitNotValue (as an unsigned long long) to NSNumber and NSMutableNumber.
- Adds plusOne and subtractOne to return their respective classes NSNumber and NSMutableNumber adding and subtracting 1.
- Adds addOne and minusOne to NSMutableNumber for incrementing and decrementing.
- Adds isNegativeOne, isZero, isOne, isTwo, isThree, isFour, isFive, isNAN, isInfinity, and isNegativeInfinity properties to NSNumber and NSMutableNumber.
- Adds unichar type support to NSNumber and NSMutableNumber.  "unicharValue" is a new type that is returned; setable in NSMutableNumber. (Unichar is unsigned short).
- Enables support for NSSecureCoding.
- Updates Unit Tests for all the above added functionality.

Changes on version 1.1.4:
- Add NSMutableCopying protocol to NSNumber.
- Add NSMutableCopying protocol to NSMutableNumber

Changes on version 1.1.3:
- Tests small fix.

Changes on version 1.1.2:
- Split C++ and Objective-C implementation.

Changes on version 1.0.15:
- Update all tests, documentation and usage.

Changes on version 1.0.14:
- Add tests XCode project.

Changes on version 1.0.12:
- Number compare fix.

Changes on version 1.0.7:
- Thread safe C++ implementation.

Changes on version 1.0.5:
- Static initialisers.
- ARC support.

Changes on version 1.0.3:
- String value getter.

Changes on version 1.0.2:
- mutableCopy implementation.
