@@ -1,5 +1,10 @@
-Changes on version 1.2.2 (current):
-- Better `compare:` method to replicate output of NSNumber, especially around NaN.
+Changes on version 1.2.3 (current):
+- Changed NaN to notANumber, for alignment with NSDecimalNumber.
+- copy the class numbers like zero, one, infinity, etc.
+- Property to construct special number: one, for alignment with NSDecimalNumber.
+
+Changes on version 1.2.2:
+- Better `compare:` method to replicate output of NSNumber, especially around NotANumber.
 - NSCoder support for older non-keyed coding (for older versions of Apple OSes).
 - Properties to construct special numbers: infinity, negative Infinity (minusInfinity), NaN, zero, and negative Zero (-0.0 double).
 - Better isNegativeOne
